@@ -1,8 +1,8 @@
 Package: MultiRankSeq
 Type: Package
 Title: MultiRankSeq
-Version: 1.2.0
-Date: 2014-03-25
+Version: 1.2.2
+Date: 2014-11-05
 Author: Shilin Zhao, Yan Guo, Shyr Yu
 Maintainer: Shilin Zhao <shilin.zhao@vanderbilt.edu>
 Description: MultiRankSeq package provides a rank sum approach using multiple
@@ -16,3 +16,5 @@ Depends:
     baySeq,
     VennDiagram,
     knitr
+Collate:
+    'MultiRankSeqFunctions.R'
