@@ -1,3 +1,3 @@
-export(MultiRankSeqReport)
 export(diffReport)
 export(findDiff)
+export(MultiRankSeqReport)
