@@ -40,12 +40,12 @@ NULL
 ##' #this code may take two minutes, because performing baySeq, DESeq2, and edgeR may be slow. 
 ##' result<-MultiRankSeqReport(output="MultiRankSeq2.html",rawCounts=exampleCounts,group=c(0,0,0,1,1,1),paired=c(1:3,1:3)
 ##' }
-MultiRankSeqReport<-function(output="MultiRankSeq.html",rawCounts,group=c(0,0,0,1,1,1),diffResult,seed=NULL,paired=NULL,exportCounts=F,useVStCount=T,...) {
+MultiRankSeqReport<-function(output="MultiRankSeq.html",rawCounts,group=c(0,0,0,1,1,1),diffResult,seed=NULL,paired=NULL,exportCounts=F,useVStCount=T,percent=0.05,...) {
 	rawCounts<-rawCounts[which(rowSums(rawCounts)>0),]
 	if (missing(diffResult)) {
 		diffResult<-findDiff(rawCounts=rawCounts,group=group,paired=paired,seed=seed)
 	}
-	diffReport(output=output,diffResult=diffResult,rawCounts=rawCounts,group=group,paired=paired,exportCounts=exportCounts,useVStCount=useVStCount,...)
+	diffReport(output=output,diffResult=diffResult,rawCounts=rawCounts,group=group,paired=paired,exportCounts=exportCounts,useVStCount=useVStCount,percent=percent,...)
 	return(diffResult)
 }
 
@@ -93,11 +93,12 @@ findDiff<-function(rawCounts,group=c(rep(0,ncol(rawCounts)/2),rep(1,ncol(rawCoun
 ##' @inheritParams MultiRankSeqReport
 ##' @param input The templet file. You don't need to specify it in most cases. A file in MultiRankSeq package will be used.
 ##' @param diffResult The result generated by \code{\link{findDiff}} function.
+##' @param percent The percent of genes with highest SD, to be used in heatmap. 
 ##' @export
 ##' @examples data(exampleCounts)
 ##' data(exampleCountsDiff)
 ##' diffReport(output="MultiRankSeq.html",diffResult=exampleCountsDiff,rawCounts=exampleCounts)
-diffReport<-function(input=system.file("extdata", "report.Rhtml", package = "MultiRankSeq"),output,diffResult,rawCounts,group=c(0,0,0,1,1,1),paired=NULL,exportCounts=F,useVStCount=T) {
+diffReport<-function(input=system.file("extdata", "report.Rhtml", package = "MultiRankSeq"),output,diffResult,rawCounts,group=c(0,0,0,1,1,1),paired=NULL,exportCounts=F,useVStCount=T,percent=0.05) {
 #	require(knitr)
 #	require(VennDiagram)
 	outputWd<-dirname(output)
@@ -140,10 +141,12 @@ mybayseq2<-function(count, group,paired=NULL){
 	if (is.null(paired)) {
 		conds <- list(NDE = rep(1, length(group)), DE = group)
 		CD<-new("countData", data = count, replicates = group, groups = conds)
-		CD@libsizes <- getLibsizes(CD, estimationType="quantile")
+#		CD@libsizes <- getLibsizes(CD, estimationType="quantile")
+		libsizes(CD)<- getLibsizes(CD, estimationType="quantile")
 		CDP.NBML <- getPriors.NB(CD, samplesize = 1000, 
 				estimation = "QL", equalDispersions=TRUE, cl = cl)
-		CDPost.NBML <- getLikelihoods.NB(CDP.NBML, pET = 'BIC', cl = cl)
+#		CDPost.NBML <- getLikelihoods.NB(CDP.NBML, pET = 'BIC', cl = cl)
+		CDPost.NBML <- getLikelihoods(CDP.NBML, pET = 'BIC', cl = cl)
 		bayseq<-topCounts(CDPost.NBML, group = "DE", 
 				number=dim(count)[1] )[,-c(1:(dim(count)[2]+1) )]
 		if ("FDR.DE" %in% colnames(bayseq)) {
@@ -223,7 +226,12 @@ combined_result2<-function(DESeq,edgeR,bayseq,rawCount,comparGroups=c(0,0,0,1,1,
 	temp<-row.names(DESeq)
 	temp1<-apply(rawCount,1,function(x) log2(mean(x[which(comparGroups==1)])/mean(x[which(comparGroups==0)])))
 	temp1<-temp1[temp]
-	compar1Result<-cbind(DESeq[temp,c(2,5,6)],edgeR[temp,c(1,4,5)],rawLogFold=temp1,OneMLikelihood=(1-bayseq[temp,1]),AdjLikelihood=bayseq[temp,2])
+	if (NCOL(DESeq)==6) {
+		DESeqResultIndex<-c(2,5,6)
+	} else {
+		DESeqResultIndex<-c(2,4,5)
+	}
+	compar1Result<-cbind(DESeq[temp,DESeqResultIndex],edgeR[temp,c(1,4,5)],rawLogFold=temp1,OneMLikelihood=(1-bayseq[temp,1]),AdjLikelihood=bayseq[temp,2])
 	rankCompar1Result1<-apply(apply(compar1Result[,c(2,5,8)],2,rank),1,sum)
 	if (rankMethod1==1) {
 		result<-cbind(compar1Result,apply(compar1Result[,c(2,5,8)],2,rank),rankMethod1=rankCompar1Result1)
@@ -449,7 +457,8 @@ venn.diagram1<-function (x, filename, height = 3000, width = 3000, resolution = 
 
 plotOverlap<-function(result,cutoffP=0.05,cutoffFC=1,cutoffTopN=100,method=c("p","pf","f","r")) {
 #	require(VennDiagram)
-	vennResult<-NULL
+	vennResult<-list()
+	method<-match.arg(method)
 	if (! (method %in% c("pf","p","f","r"))) {
 		print("method should be one of pf, p, f, r")
 		return(0)
