@@ -3,8 +3,7 @@
 \title{MultiRankSeqReport}
 \usage{
 MultiRankSeqReport(output = "MultiRankSeq.html", rawCounts, group = c(0, 0,
-  0, 1, 1, 1), diffResult, seed = NULL, paired = NULL, exportCounts = F,
-  useVStCount = T, ...)
+  0, 1, 1, 1), diffResult, ...)
 }
 \arguments{
   \item{output}{the path and name for report file.}
@@ -16,26 +15,9 @@ MultiRankSeqReport(output = "MultiRankSeq.html", rawCounts, group = c(0, 0,
   or 1. The samples labeled as 1 will be compared with
   samples labeled as 0.}
 
-  \item{paired}{the pairs of count data. Will be NULL if no
-  pair. For example, if sample 1 and 2 are one pair, sample
-  3 and 4 are another pair, the paired should be
-  c(1,1,2,2).}
-
-  \item{seed}{the random seed for bayseq. The user can set
-  it so that the bayseq result can be reproduced.}
-
   \item{diffResult}{The result generated by
   \code{\link{findDiff}} function. If not specified,
   findDiff function will be used to generate it.}
-
-  \item{exportCounts}{Logical. Indicate if the raw counts
-  will be exported in result table.}
-
-  \item{useVStCount}{Logical.The DESeq2 package can apply a
-  variance stabilizing transformation (VST) to count data,
-  which can be used in checking outliers or clustering.
-  This parameter indicates if the transformed counts will
-  be used in heatmap, boxplot, and correlation in reports.}
 
   \item{...}{Other parameters used in
   \code{\link{diffReport}} function.}
@@ -51,11 +33,11 @@ data.
 #A simple example
 data(exampleCounts)
 data(exampleCountsDiff)
-result<-MultiRankSeqReport(output="MultiRankSeq1.html",diffResult=exampleCountsDiff,rawCounts=exampleCounts)
+MultiRankSeqReport(output="MultiRankSeq1.html",diffResult=exampleCountsDiff,rawCounts=exampleCounts)
 \dontrun{
-#An example: from counts data to report, paired data
-#this code may take two minutes, because performing baySeq, DESeq2, and edgeR may be slow.
-result<-MultiRankSeqReport(output="MultiRankSeq2.html",rawCounts=exampleCounts,group=c(0,0,0,1,1,1),paired=c(1:3,1:3)
+#An example: from counts data to report.
+#this code may take two minutes, because performing baySeq, DESeq, and edgeR may be slow.
+MultiRankSeqReport(output="MultiRankSeq2.html",rawCounts=exampleCounts)
 }
 }
 
