@@ -3,8 +3,7 @@
 \title{diffReport}
 \usage{
 diffReport(input = system.file("extdata", "report.Rhtml", package =
-  "MultiRankSeq"), output, diffResult, rawCounts, group = c(0, 0, 0, 1, 1, 1),
-  paired = NULL, exportCounts = F, useVStCount = T)
+  "MultiRankSeq"), output, diffResult, rawCounts, group = c(0, 0, 0, 1, 1, 1))
 }
 \arguments{
   \item{input}{The templet file. You don't need to specify
@@ -22,20 +21,6 @@ diffReport(input = system.file("extdata", "report.Rhtml", package =
   \item{group}{the group of count data, which should be 0
   or 1. The samples labeled as 1 will be compared with
   samples labeled as 0.}
-
-  \item{paired}{the pairs of count data. Will be NULL if no
-  pair. For example, if sample 1 and 2 are one pair, sample
-  3 and 4 are another pair, the paired should be
-  c(1,1,2,2).}
-
-  \item{exportCounts}{Logical. Indicate if the raw counts
-  will be exported in result table.}
-
-  \item{useVStCount}{Logical.The DESeq2 package can apply a
-  variance stabilizing transformation (VST) to count data,
-  which can be used in checking outliers or clustering.
-  This parameter indicates if the transformed counts will
-  be used in heatmap, boxplot, and correlation in reports.}
 }
 \description{
 The function will generate a report based on the result of
